# open-asr-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.nemo  Dockerfile.nemo.base  Makefile  README.md  SECURITY.md  __init__.py  app.py  cli.py  config.py  pyproject.toml  routes.py  uv.toml
.github/: release.yml
.github/workflows/: ci.yml  e2e-gpu.yml  publish.yml
backends/: __init__.py  base.py  lightning_whisper.py  parakeet.py  whisper.py
docs/: blessed-environments.md
samples/: jfk_0_5.flac  jfk_5_10.flac
scripts/: bench_parakeet_mlx.py  runpod_gpu_e2e.sh  smoke_kyutai_mlx.py  smoke_lightning.py  smoke_nemo_parakeet.py  smoke_nemo_parakeet_docker.sh  smoke_parakeet.py  smoke_whisper.py  smoke_whisper_cpp.py
src/open_asr_server/: __init__.py  app.py  cli.py  config.py  install_hints.py  models.py  routes.py
src/open_asr_server/backends/: __init__.py  faster_whisper.py  lightning_whisper.py  nemo_asr.py  parakeet.py  whisper.py
src/open_asr_server/utils/: model_cache.py
tests/: backend_imports_cpu.py  backend_imports_nemo.py  conftest.py  test_app.py  test_backends.py  test_cli.py  test_formatters.py  test_install_hints.py  test_model_cache.py  test_packaging.py  test_routes.py  test_version.py
tests/e2e/: test_nemo_gpu.py
tests/integration/: test_http_integration.py
